<resources>
    <string name="app_name">MyZoo</string>
    <string name="activity_title_accueil">Accueil</string>
    <string name="activity_title_alert">Alerte</string>
    <string name="activity_title_zoo">Carte du zoo</string>
    <string name="activity_title_aquarium">Carte de l\'aquarium</string>
    <string name="activity_title_popcorn">Stand à popcorn</string>
    <string name="activity_title_voliere">C\'est pas moi qui ai tué le chat</string>
    <string name="toast_fish_popcorn_warning">pas de popcorn aux %1$s</string>
    <string name="toast_birds_popcorn">pas de popcorn aux oiseaux non plus</string>
    <string name="accueil_textview_title">un titre</string>
    <string name="accueil_textview_infos">Le pangolin est un mammifère édenté d\'Afrique et d\'Asie, une bête éminemment pacifique. De ma vie, je n\'ai jamais eu à me plaindre d\'un pangolin. Il mesure un mètre. Sa femelle s\'appelle la pangoline. Elle ne donne le jour qu\'à un seul petit à la fois, qui s\'appelle Toto. Le pangolin ressemble à un artichaut à l\'envers prolongé d\'une queue à la vue de laquelle on se prend à penser que le ridicule ne tue plus. Pour plus d\'informations sur le pangolin, n\'appelez surtout pas le +33652449834.</string>
    <string name="accueil_textView_news">news !!!</string>
    <string name="accueil_btn_map_label">Carte</string>
    <string name="accueil_btn_alert_label">Alerte</string>
    <string name="alert_urgent_cb">est urgent ?</string>
    <string name="alerte_titre_label">Titre de l\'alerte</string>
    <string name="alerte_lieu_label">lieu :</string>
    <string name="alerte_description_label">Description :</string>
    <string name="alert_button_submit">Envoyer</string>
    <string name="menuOptionButton">Paramètres</string>
    <string name="menuOptionSubMenuAlertsButton">Alertes</string>
</resources>
